fixed: issue logo size on mobile and vert. align notif ic

--- a/Betoken/src/assets/scss/_user.scss
+++ b/Betoken/src/assets/scss/_user.scss
@@ -14,6 +14,9 @@
 .badge-xl{
     font-size: 14px;
 }
+.navbar-brand > img{
+    max-height: 2rem;
+}
 
 @media (min-width: 768px)
 {.main-content {
